Fix contrast issue

--- a/src/css/service.css
+++ b/src/css/service.css
@@ -1,5 +1,5 @@
 .overview-title {
-  color: #30b454;
+  color: #1a8637;
   font-size: 2rem;
   font-weight: 600;
 }
@@ -64,7 +64,7 @@
   width: 50%;
 }
 .staff-o-title {
-  color: #30b454;
+  color: #1a8637;
   font-weight: 600;
 }
 .staff-o-text {
